figuring out how to fix layout issue with button

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -76,8 +76,6 @@ p {
   background-color: #5dade2;
   border: 1px solid #5dade2;
   border-radius: 15px;
-  width: 200px;
-  height: 80px;
 }
 
 .button-alt:hover {
@@ -93,8 +91,6 @@ p {
 }
 
 .button-alt-2 {
-  width: 140px;
-  height: 45px;
   font-family: 'Roboto', sans-serif;
   font-size: 11px;
   text-transform: uppercase;
@@ -192,14 +188,11 @@ h1 {
   font-style: bold;
   color: black;
   background: #fef5e7;
-  /* background-color: #f2d7d5; */
   width: 100%;
-  height: 70%;
-  /* margin-top: 2rem; */
+  height: 80%;
   justify-content: space-between;
   align-items: center;
   text-align: center;
-  padding-bottom: 2rem;
 }
 
 .Mono {
